--- a/src/app/modules/featured-collections/featured-collections-list/featured-collections-list.component.html
+++ b/src/app/modules/featured-collections/featured-collections-list/featured-collections-list.component.html
@@ -478,7 +478,7 @@
                                     <!-- Parent Custom Classes -->
                                     <div>
                                         <label class="block text-sm font-medium text-gray-700 mb-2">
-                                            <i class="pi pi-code text-primary-600 mr-2"></i>
+                                            <i class="pi pi-code text-primary-600 me-2"></i>
                                             Parent Container Classes
                                         </label>
                                         <textarea pInputTextarea formControlName="parentCustomStyle" [rows]="4" 
@@ -710,16 +710,16 @@
                         <div class="collection-title-section">
                             <h4 class="collection-title">
                                 @if(collectionGroup.get('title.en')?.value || collectionGroup.get('title.ar')?.value) {
-                                    <i class="pi pi-image text-primary-600 mr-2"></i>
+                                    <i class="pi pi-image text-primary-600 me-2"></i>
                                     <span class="title-en">{{ collectionGroup.get('title.en')?.value || 'Untitled' }}</span>
                                 } @else {
-                                    <i class="pi pi-file-edit text-gray-400 mr-2"></i>
+                                    <i class="pi pi-file-edit text-gray-400 me-2"></i>
                                     <span class="title-placeholder">Collection #{{ i + 1 }}</span>
                                 }
                             </h4>
                             @if(collectionGroup.get('title.ar')?.value) {
                             <p class="collection-subtitle">
-                                <i class="pi pi-language mr-1"></i>
+                                <i class="pi pi-language me-1"></i>
                                 {{ collectionGroup.get('title.ar')?.value }}
                             </p>
                             }
