--- a/src/assets/layout/_main.scss
+++ b/src/assets/layout/_main.scss
@@ -7,6 +7,13 @@
     transition: margin-left var(--layout-section-transition-duration);
 }
 
+/* RTL layout fixes */
+[dir='rtl'] {
+    .layout-main-container {
+        transition: margin-right var(--layout-section-transition-duration);
+    }
+}
+
 .layout-main {
     flex: 1 1 auto;
     padding-bottom: 2rem;
