--- a/src/assets/layout/_menu.scss
+++ b/src/assets/layout/_menu.scss
@@ -17,6 +17,74 @@
     padding: 0.5rem 1.5rem;
 }
 
+/* RTL layout fixes */
+[dir='rtl'] {
+    .layout-sidebar {
+        left: auto;
+        right: 2rem;
+    }
+
+    .layout-menu {
+        ul {
+            a {
+                .layout-menuitem-icon {
+                    margin-right: 0;
+                    margin-left: 0.5rem;
+                }
+
+                .layout-submenu-toggler {
+                    margin-left: 0;
+                    margin-right: auto;
+                }
+            }
+
+            ul {
+                li {
+                    a {
+                        margin-left: 0;
+                        margin-right: 1rem;
+                    }
+
+                    li {
+                        a {
+                            margin-left: 0;
+                            margin-right: 2rem;
+                        }
+
+                        li {
+                            a {
+                                margin-left: 0;
+                                margin-right: 2.5rem;
+                            }
+
+                            li {
+                                a {
+                                    margin-left: 0;
+                                    margin-right: 3rem;
+                                }
+
+                                li {
+                                    a {
+                                        margin-left: 0;
+                                        margin-right: 3.5rem;
+                                    }
+
+                                    li {
+                                        a {
+                                            margin-left: 0;
+                                            margin-right: 4rem;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 .layout-menu {
     margin: 0;
     padding: 0;
