--- a/src/assets/layout/_topbar.scss
+++ b/src/assets/layout/_topbar.scss
@@ -81,7 +81,7 @@
     }
 
     .layout-topbar-actions {
-        margin-left: auto;
+        margin-inline-start: auto;
         display: flex;
         gap: 1rem;
     }
